// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/LayoutsList default 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-gqPbQI bQOFXV"
    >
      <h6
        className="sc-cLQEGU dqzHMR"
      >
        Recent Layouts
      </h6>
      <ul
        className="sc-bMVAic gPRzAa"
      >
        <div
          className="sc-cmthru geyJCr"
        >
          <li
            className="sc-esOvli kzZhlS"
            onClick={[Function]}
          >
            layout
          </li>
          <div
            className="sc-ifAKCX bwWvNt"
            color="#E7E7E7"
            onClick={[Function]}
            size={14}
          />
        </div>
      </ul>
    </div>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Components/LayoutsList
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            default
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            className="css-r8d96o eyvlbql0"
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  LayoutsList
                </span>
                <span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      close
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          close
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      deleteLayout
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          deleteLayout clicked
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      layouts
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          [
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              {
                              <span>
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  id
                                </span>
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                'layout'
                              </span>
                              ,
                              <span>
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  layout
                                </span>
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span>
                                  <span>
                                    <br />
                                          
                                      
                                  </span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    apps
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  [
                                  ]
                                </span>
                                ,
                                <span>
                                  <span>
                                    <br />
                                          
                                      
                                  </span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    monitorInfo
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span>
                                    <span>
                                      <br />
                                              
                                        
                                    </span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      deviceScaleFactor
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#a11",
                                      }
                                    }
                                  >
                                    1
                                  </span>
                                  ,
                                  <span>
                                    <span>
                                      <br />
                                              
                                        
                                    </span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      dpi
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    {
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        x
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#a11",
                                        }
                                      }
                                    >
                                      96
                                    </span>
                                    ,
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        y
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#a11",
                                        }
                                      }
                                    >
                                      96
                                    </span>
                                    }
                                  </span>
                                  ,
                                  <span>
                                    <span>
                                      <br />
                                              
                                        
                                    </span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      nonPrimaryMonitors
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    [
                                    ]
                                  </span>
                                  ,
                                  <span>
                                    <span>
                                      <br />
                                              
                                        
                                    </span>
                                    …
                                  </span>
                                  <span>
                                    <br />
                                            
                                  </span>
                                  }
                                </span>
                                ,
                                <span>
                                  <span>
                                    <br />
                                          
                                      
                                  </span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    schemaVersion
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  ''
                                </span>
                                ,
                                <span>
                                  <span>
                                    <br />
                                          
                                      
                                  </span>
                                  …
                                </span>
                                <span>
                                  <br />
                                        
                                </span>
                                }
                              </span>
                              ,
                              <span>
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  name
                                </span>
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                'layout'
                              </span>
                              }
                            </span>
                          </span>
                          ]
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      restoreLayout
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          restoreLayout clicked
                        </span>
                        }
                      </span>
                    </span>
                    <br />
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              className="css-1naocv3 eva467m0"
              onClick={[Function]}
            >
              <div
                className="css-lvl6aa eva467m1"
              >
                <div
                  style={
                    Object {
                      "marginBottom": 6,
                    }
                  }
                >
                  Copied!
                </div>
                <div>
                  Copy
                </div>
              </div>
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              LayoutsList
              " Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/LayoutsList with Wrapper 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-dUjcNx jouRfq"
    >
      <div
        className="sc-gqPbQI bQOFXV"
      >
        <h6
          className="sc-cLQEGU dqzHMR"
        >
          Recent Layouts
        </h6>
        <ul
          className="sc-bMVAic gPRzAa"
        >
          <div
            className="sc-cmthru geyJCr"
          >
            <li
              className="sc-esOvli kzZhlS"
              onClick={[Function]}
            >
              layout
            </li>
            <div
              className="sc-ifAKCX bwWvNt"
              color="#E7E7E7"
              onClick={[Function]}
              size={14}
            />
          </div>
        </ul>
      </div>
    </div>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Components/LayoutsList
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            with Wrapper
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            className="css-r8d96o eyvlbql0"
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    styled.div
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    LayoutsList
                  </span>
                  <span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        close
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#170",
                              }
                            }
                          >
                            close
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        deleteLayout
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#170",
                              }
                            }
                          >
                            deleteLayout clicked
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        layouts
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            [
                            <span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    id
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  'layout'
                                </span>
                                ,
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    layout
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span>
                                    <span>
                                      <br />
                                            
                                        
                                    </span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      apps
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    [
                                    ]
                                  </span>
                                  ,
                                  <span>
                                    <span>
                                      <br />
                                            
                                        
                                    </span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      monitorInfo
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    {
                                    <span>
                                      <span>
                                        <br />
                                                
                                          
                                      </span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        deviceScaleFactor
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#a11",
                                        }
                                      }
                                    >
                                      1
                                    </span>
                                    ,
                                    <span>
                                      <span>
                                        <br />
                                                
                                          
                                      </span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        dpi
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      {
                                      <span>
                                        <span
                                          style={
                                            Object {
                                              "color": "#666",
                                            }
                                          }
                                        >
                                          x
                                        </span>
                                      </span>
                                      : 
                                      <span
                                        style={
                                          Object {
                                            "color": "#a11",
                                          }
                                        }
                                      >
                                        96
                                      </span>
                                      ,
                                      <span>
                                        <span
                                          style={
                                            Object {
                                              "color": "#666",
                                            }
                                          }
                                        >
                                          y
                                        </span>
                                      </span>
                                      : 
                                      <span
                                        style={
                                          Object {
                                            "color": "#a11",
                                          }
                                        }
                                      >
                                        96
                                      </span>
                                      }
                                    </span>
                                    ,
                                    <span>
                                      <span>
                                        <br />
                                                
                                          
                                      </span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        nonPrimaryMonitors
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      [
                                      ]
                                    </span>
                                    ,
                                    <span>
                                      <span>
                                        <br />
                                                
                                          
                                      </span>
                                      …
                                    </span>
                                    <span>
                                      <br />
                                              
                                    </span>
                                    }
                                  </span>
                                  ,
                                  <span>
                                    <span>
                                      <br />
                                            
                                        
                                    </span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      schemaVersion
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    ''
                                  </span>
                                  ,
                                  <span>
                                    <span>
                                      <br />
                                            
                                        
                                    </span>
                                    …
                                  </span>
                                  <span>
                                    <br />
                                          
                                  </span>
                                  }
                                </span>
                                ,
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    name
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  'layout'
                                </span>
                                }
                              </span>
                            </span>
                            ]
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        restoreLayout
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#170",
                              }
                            }
                          >
                            restoreLayout clicked
                          </span>
                          }
                        </span>
                      </span>
                      <br />
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;/
                    styled.div
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              className="css-1naocv3 eva467m0"
              onClick={[Function]}
            >
              <div
                className="css-lvl6aa eva467m1"
              >
                <div
                  style={
                    Object {
                      "marginBottom": 6,
                    }
                  }
                >
                  Copied!
                </div>
                <div>
                  Copy
                </div>
              </div>
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              LayoutsList
              " Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              styled.div
              " Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
